name:                fuga
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/fuga#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable server
  hs-source-dirs:      src
  main-is:             Server.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , async
                     , broadcast-chan
                     , containers
                     , fuga
                     , random
                     , stm
                     , text
                     , websockets
  ghc-options:         -Wall -threaded -with-rtsopts=-N

executable client
  hs-source-dirs:      src
  main-is:             Client.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , fuga
                     , gloss
                     , text
                     , websockets
  ghc-options:         -Wall -threaded -with-rtsopts=-N

library
  hs-source-dirs:      lib
  exposed-modules:     Types
                     , Common
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010
  ghc-options:         -Wall

